add features : productsDiscount
